<resources>
    <string name="firebase_database_url">https://w23-csci3130-group-17-default-rtdb.firebaseio.com/</string>
    <string name="push_notification_endpoint">https://fcm.googleapis.com/fcm/send</string>
    <string name="FIREBASE_SERVER_KEY">AAAAxboTxUY:APA91bEb4AHqF1QrCK0Xk2wNCxSP40PVk9jg2FyNwD3VILMrxUUol1m7yrCPWKCNYtco1y8ClnImBQEUnrv3cFdGRYJXXr5QCVyGwznjFZbDKHFBwfuGpP53NopyV32HL70QX2kFs6NU</string>

    <string name="app_name">Barter Trader</string>
    <string name="EMPTY_STRING" />
    <string name="EMPTY_EMAIL">Please enter an email id to sign up with.</string>
    <string name="INVALID_EMAIL">Please enter a valid email address.</string>
    <string name="USED_EMAIL">This email already has an account! Please log in, or use a different email.</string>
    <string name="EMPTY_PASSWORD">Please enter a password for your account.</string>
    <string name="DIFFERENT_PASSWORDS">Please make sure both passwords are matching!</string>
    <string name="INVALID_PASSWORD">Password may only contain allowing characters [A–Za–z0–9]</string>
    <string name="SHORT_PASSWORD">Password must contain 6 or more characters.</string>


    <string name="EMPTY_EMAIL_LOGIN">Please enter an email to login with.</string>
    <string name="EMPTY_PASSWORD_LOGIN">Password field cannot be left empty!</string>
    <string name="INCORRECT_PASSWORD_LOGIN">Invalid email/password. Please try again.</string>
    <string name="NEW_EMAIL_LOGIN">This email is not registered. Please sign up.</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="search">Search</string>

    <string name="product_type_prompt">Choose Product Type</string>


    <string name="ADD_PRODUCT_TITLE">Add a new product!</string>
    <string name="NAME_PRODUCT_TITLE">Name of Product</string>
    <string name="ENTER_PROD_NAME_HINT">Enter a name</string>
    <string name="PRODUCT_TYPE_TITLE">Product Type</string>
    <string name="DESCRIPTION_TITLE">Description</string>
    <string name="ENTER_DESC_HINT">Enter a description</string>
    <string name="DATE_AVAILABLE_TITLE">Date of Availability</string>
    <string name="EXCHANGE_PLACE_TITLE">Place of Exchange</string>
    <string name="EXCHANGE_PLACE_HINT">Enter a place of exchange</string>
    <string name="APPROX_MARKET_VAL_TITLE">Approximate Market Value</string>
    <string name="MARKET_VALUE_HINT">Enter the approximate market value</string>
    <string name="PREF_EXCHANGE_TITLE">Preferred Exchanges in Return</string>
    <string name="CANCEL">Cancel</string>
    <string name="SUBMIT">Submit</string>
    <string name="PRODUCT_NAME_ERROR">Please enter a name for your product!</string>
    <string name="EXCHANGE_PLACE_ERROR">Please enter a place of exchange!</string>
    <string name="EMPTY_MARKET_VAL">Please enter an approximate market value!</string>
    <string name="MARKET_VAL_NEED_INT_ERROR">Please enter an integer market value!</string>
    <string name="SUCCESSFUL_PRODUCT_CREATION">Product created successfully!</string>
    <string name="SUCCESSFUL_PRODUCT_UPDATE">Product updated Successfully!</string>
    <string name="advanceSearch">Search</string>
    <string name="value_range">Value Range</string>
    <string name="value_from">from</string>
    <string name="value_to">to</string>
    <string name="default_value_down_range_hint">0</string>
    <string name="default_value_up_range_hint">inf</string>
    <string name="preferred_exchange_place">Preferred Exchange Place</string>
    <string name="save">save</string>
    <string name="advance_search">Advance Search</string>
    <string name="google_maps_api_key">AIzaSyADgAur80t_vb3uX2PEm75aNBiUq9yFOOU</string>

    <string-array name="product_types">
        <item>Baby Toys</item>
        <item>Clothes</item>
        <item>Computer Accessories</item>
        <item>Mobile Phones</item>
        <item>Furniture</item>
    </string-array>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="RATING_ERROR">Please enter a rating for this user.</string>
    <string name="CANNOT_EDIT_SOLD">Cannot edit a SOLD product</string>
    <string name="SUCCESSFUL_RATING">Rating Successful!</string>
    <string name="value_provided">Value Provided:</string>
    <string name="exchange_history">Exchange History:</string>
    <string name="value_received">Value Received:</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">send</string>
    <string name="failed_to_send_message">Failed to send message</string>


</resources>